2005-08-20  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoFaceInfo.h (-fontFace): Use
	_cairo_toy_font_face_create, as Cairo did rename this function.
	* Headers/cairo/CairoFontInfo.h (_cairo_glyph_for_NSGlyph): Use
	Cairo function _cairo_scaled_font_text_to_glyphs to convert to glyphs.

2005-08-16  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/art/ftfont.m (-[FTFontInfo drawString:...]):
	Initialize index d for delta_data[].  (Already done in ftfont-old.)

2005-07-28  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoFaceInfo.h,
	* Headers/cairo/CairoFontEnumerator.h,
	* Headers/cairo/CairoFontInfo.h,
	* Headers/cairo/CairoSurface.h,
	* Headers/cairo/XGCairoSurface.h,
	* Source/cairo/CairoContext.m,
	* Source/cairo/CairoGState.m,
	* Source/cairo/CairoFaceInfo.m,
	* Source/cairo/CairoFontInfo.m,
	* Source/cairo/CairoFontEnumerator.m,
	* Source/cairo/CairoSurface.m,
	* Source/cairo/NSBezierPathCairo.m,
	* Source/cairo/XGCairoGlitzSurface.m,
	* Source/cairo/XGCairoSurface.m,
	* Source/cairo/XGCairoXImageSurface.m,

	Adopted to changes in latest release of cairo.

	* Source/cairo/GNUmakefile:
	Removed file CairoFontManager.m
	
2005-07-22  Adam Fedor  <fedor@gnu.org>

	* Version 0.10.0

2005-07-17  Adam Fedor  <fedor@gnu.org>

	* Version: Add interface version number
	* Source/GNUmakefile: Use it.
	* Source/GNUmakefile.postamble: Idem, add custom Info.plist.
	* Source/GNUmakefile.preamble: Update for interface version.

2005-07-14  Adam Fedor  <fedor@gnu.org>

	* Source/winlib/WIN32GState.m ([WIN32GState -compositeGState:...]): 
	Fall through to default operation if alpha blend not sucessful.

2005-07-09  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSGState.h,
	Source/gsc/GSGState.m: New methods  
	[-compositeGState:fromRect:toPoint:op:fraction:] and
	[GSSetPatterColor:]. Also added ivar pattern. 
	* Source/gsc/GSGState.m (-dealloc, -deepen, -setColor:state:):
	Deal with pattern ivar.
	* Source/gsc/GSContext.m,